--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.7",
+    "unplugin-auto-import": "^19.1.1",
     "vue": "^3.4.38",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
+    "typescript": "^5.8.2",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^5.4.2",
     "vue-tsc": "^2.1.4"
   }
