--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.7",
+    "pinia": "^3.0.1",
+    "pinia-plugin-persistedstate": "^4.2.0",
     "unplugin-auto-import": "^19.1.1",
     "vue": "^3.4.38",
     "vue-router": "^4.3.0"
