--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "rewrites": [
         {
             "source": "/api/:path*",
-            "destination": "http://zhyqqkjerb.serv00.net:21904/api/:path*"
+            "destination": "http://zhyqqkjerb.serv00.net:21904/:path*"
         }
     ]
 }
