--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# VITE_API_BASE_URL=http://localhost:63830
-VITE_API_BASE_URL=http://zhyqqkjerb.serv00.net:21904/
+VITE_API_BASE_URL=http://localhost:21904
+# VITE_API_BASE_URL=http://zhyqqkjerb.serv00.net:21904/
