--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "typescript": "^5.8.2",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^5.4.2",
+    "vite-svg-loader": "^5.1.0",
     "vue-tsc": "^2.1.4"
   }
 }
