--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,6 @@ dist
 dist-ssr
 *.local
 
-.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -23,3 +22,10 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
