--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "@rollup/plugin-commonjs": "^28.0.3",
+    "@types/crypto-js": "^4.2.2",
     "ant-design-vue": "^4.1.2",
     "axios": "^1.6.7",
+    "crypto-js": "^4.2.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "unplugin-auto-import": "^19.1.1",
