--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@vitejs/plugin-vue": "^5.1.3",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
+    "rollup-plugin-terser": "^7.0.2",
     "tailwindcss": "^3.4.1",
+    "terser": "^5.39.0",
     "typescript": "^5.8.2",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^5.4.2",
