--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "@ant-design/icons-vue": "^7.0.1",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@types/crypto-js": "^4.2.2",
-    "ant-design-vue": "^4.1.2",
+    "@wangeditor/editor-for-vue": "^5.1.12",
+    "ant-design-vue": "^4.2.6",
     "axios": "^1.6.7",
     "crypto-js": "^4.2.0",
+    "md-editor-v3": "^5.5.0",
     "pinia": "^3.0.1",
     "pinia-plugin-persistedstate": "^4.2.0",
     "unplugin-auto-import": "^19.1.1",
-    "vue": "^3.4.38",
+    "vue": "^3.5.13",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.87.0",
     "tailwindcss": "^3.4.1",
     "terser": "^5.39.0",
     "typescript": "^5.8.2",
