--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "source": "/api/:path*",
       "destination": "http://zhyqqkjerb.serv00.net:21904/:path"
+    },
+    {
+      "source": "/upload/:path*",
+      "destination": "http://lihk.serv00.net:13381/api/:path*"
     }
   ]
 }
