--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.1.3",
+    "@vitejs/plugin-vue-jsx": "^4.2.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "rollup-plugin-terser": "^7.0.2",
